update about team

--- a/www/templates/about.html
+++ b/www/templates/about.html
@@ -9,12 +9,15 @@
 					<div class="list card">
 					  <a href="" class="item item-icon-left">
 					    <i class="icon ion-ionic"></i>
-					    Developer: Sorfal
+					    Команда разработчиков WebSoftAgency: 
 					    </a>
-
+	  				  <a href="" class="item item-icon-left">
+					    <i class="icon ion-at"></i>
+					    Nikolay Gerzhan: nikolay.gerzhanb@gmail.com
+					  </a>
 					  <a href="" class="item item-icon-left">
 					    <i class="icon ion-at"></i>
-					    Email: sorfal.web@gmail.com
+					    Nikita Issaev: sorfal.web@gmail.com
 					  </a>
 					</div>			
 				</div>
